updated jupyter bash example

--- a/demo-R.ipynb
+++ b/demo-R.ipynb
@@ -17,7 +17,14 @@
    "metadata": {},
    "source": [
     "# 1) How to generate a document from this file\n",
-    "    You can create an HTML output file by simply selecting `File -> Download as -> HTML (.html)` or `File -> Download as -> PDF via LaTeX (.pdf)`. \n",
+    "    You can create an HTML or PDF output file by simply selecting \n",
+    "    ```\n",
+    "    File -> Download as -> HTML (.html)\n",
+    "    ``` \n",
+    "    or \n",
+    "    ```\n",
+    "    File -> Download as -> PDF via LaTeX (.pdf)\n",
+    "    ```\n",
     "\n",
     "To generate a document from the command line, you can do the following:\n",
     "```\n",
@@ -36,7 +43,7 @@
     "\n",
     "# 2) Some basic Markdown formatting\n",
     "\n",
-    "Here's an *introduction* to our **critical** discovery. We have some code to display but not evaluate: `7 %% 5` and we can embed the code in a static code block as follows:\n",
+    "Here's an *introduction* to our **critical** discovery. We have some code to display but not evaluate: `7 %% 5`, and we can embed the code in a static code block as follows:\n",
     "```\n",
     "a = 7 %% 5\n",
     "b = exp(a)\n",
