--- a/demo-bash.ipynb
+++ b/demo-bash.ipynb
@@ -17,15 +17,21 @@
    "metadata": {},
    "source": [
     "# 1) How to generate a document from this file\n",
-    "You can create an HTML output file by simply selecting `File -> Download as -> HTML (.html)`. I don't know of a way to directly generate a PDF.\n",
+    " You can create an HTML or PDF output file by simply selecting \n",
+    " ```\n",
+    " File -> Download as -> HTML (.html)\n",
+    " ``` \n",
+    " or \n",
+    " ```\n",
+    " File -> Download as -> PDF via LaTeX (.pdf)\n",
+    " ```\n",
     "\n",
     "To generate a document from the command line, you can do the following:\n",
     "```\n",
     "ipython nbconvert demo-bash.ipynb --to html  # for html\n",
     "ipython nbconvert demo-bash.ipynb --to pdf   # for pdf\n",
     "```\n",
-    "\n",
-    "Note that generating PDF involves converting the Notebook to LaTeX, and that fails for this particular document. "
+    "However, when creating PDF, some of the formatting may be messed up.\n"
    ]
   },
   {
@@ -36,7 +42,7 @@
     "\n",
     "# 2) Some basic Markdown formatting\n",
     "\n",
-    "Here's an *introduction* to our **critical** discovery. We have some code to display but not evaluate: `7 %% 5` and will embed this in a larger workflow:\n",
+    "Here's an *introduction* to our **critical** discovery. We have some code to display but not evaluate: `7 %% 5`, and we can embed the code in a static code block as follows:\n",
     "```\n",
     "a = 7 %% 5\n",
     "b = exp(a)\n",
@@ -51,7 +57,7 @@
    "source": [
     "# 3) Embedding equations using LaTeX\n",
     "\n",
-    "This can be done with the following syntax. Note that you can't have a space after the initial $ for the inline equations.\n",
+    "This can be done with the following syntax. \n",
     "\n",
     "Here is an inline equation $f(x) = \\int f(y, x) dy$.\n",
     "\n",
@@ -68,12 +74,13 @@
     "# 4) Embedding R code\n",
     "You can't directly embed code chunks from different languages in the same document. See *demo-R.ipynb*.\n",
     "\n",
-    "# 5) Embedding bash code\n"
+    "# 5) Embedding bash code\n",
+    "For some reason only some of the output from evaluating the code in this chunk is printed:\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -116,7 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note above that output is not printed interspersed with the code, as one would generally want. So you need to break up your code into chunks such that the output appears immediately following the code.\n",
+    "To get all of the output, you may need to break up your code into chunks such that the output appears immediately following the code.\n",
     "\n",
     "Also note above that later chunks have access to result from earlier chunks (i.e., state is preserved between chunks). \n",
     "\n",
@@ -133,7 +140,7 @@
     "\n",
     "# 7) Formatting of long lines of code and of output\n",
     "\n",
-    "Now in bash, we have similar problems with line endings but bash allows us to use a backslash to break lines of code. The one thing that doesn't help us with is long lines of output. Also, we need to break long comments ourselves. And note that all results are printed at the end of a code chunk instead of interspersed immediately after the command generating the output.\n",
+    "For PDF but not HTML output, lines may overflow, and for both PDF and HTML line breaks may occur in awkward places. bash allows us to use a backslash to break lines of code, which can be helpful for breaking up the code but doesn't help with the output from evaluating the code.\n",
     "\n"
    ]
   },
@@ -156,10 +163,10 @@
    "source": [
     "echo \"Statistics at UC Berkeley: We are a community engaged in research and education in probability and statistics. In addition to developing fundamental theory and methodology, we are actively\" > tmp.txt\n",
     "  \n",
-    "echo \"Second try: Statistics at UC Berkeley: We are a community engaged \\\n",
-    "in research and education in probability and statistics. In addition to \\\n",
-    "developing fundamental theory and methodology, we are actively\" \\\n",
-    ">> tmp.txt\n",
+    "echo \"Second try: Statistics at UC Berkeley: We are a community \\\n",
+    "engaged in research and education in probability and statistics. \\\n",
+    "In addition to developing fundamental theory and methodology, \\\n",
+    "we are actively\" >> tmp.txt\n",
     "\n",
     "cat tmp.txt\n"
    ]
@@ -168,12 +175,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We also have problems with long comments, so would need to manually format them."
+    "One can also manually format long comments, though that doesn't seem necessary here."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -185,13 +192,13 @@
     }
    ],
    "source": [
-    "# the following long comment line is not broken in my test:\n",
-    "# asdl lkjsdf jklsdf kladfj jksfd alkfd klasdf klad kla lakjsdf aljdkfad kljafda kaljdf afdlkja lkajdfsa lajdfa adlfjaf jkladf afdl\n",
+    "# the following long comment line may be awkwardly broken\n",
+    "# Statistics at UC Berkeley: We are a community engaged in research and education in probability and statistics. \n",
     "\n",
     "# instead manually break it:\n",
-    "# asdl lkjsdf jklsdf kladfj jksfd alkfd klasdf klad kla \n",
-    "# lakjsdf aljdkfad kljafda kaljdf afdlkja lkajdfsa lajdfa \n",
-    "# adlfjaf jkladf afdl"
+    "# Statistics at UC Berkeley: We are a community engaged in research\n",
+    "# and education in probability and statistics. In addition \n",
+    "# to developing fundamental theory and methodology, we are actively\n"
    ]
   },
   {
