--- a/demo-python.ipynb
+++ b/demo-python.ipynb
@@ -17,7 +17,15 @@
    "metadata": {},
    "source": [
     "# 1) How to generate a document from this file\n",
-    "You can create an HTML output file by simply selecting `File -> Download as -> HTML (.html)`. I don't know of a way to directly generate a PDF.\n",
+    " You can create an HTML or PDF output file by simply selecting \n",
+    " ```\n",
+    " File -> Download as -> HTML (.html)\n",
+    " ``` \n",
+    " or \n",
+    " ```\n",
+    " File -> Download as -> PDF via LaTeX (.pdf)\n",
+    " ```\n",
+    "\n",
     "\n",
     "To generate a document from the command line, you can do the following:\n",
     "```\n",
@@ -35,7 +43,7 @@
     "\n",
     "# 2) Some basic Markdown formatting\n",
     "\n",
-    "Here's an *introduction* to our **critical** discovery. We have some code to display but not evaluate: `7 %% 5` and will embed this in a larger workflow:\n",
+    "Here's an *introduction* to our **critical** discovery. We have some code to display but not evaluate: `7 %% 5`, and we can embed the code in a static code block as follows:\n",
     "```\n",
     "a = 7 %% 5\n",
     "b = exp(a)\n",
@@ -50,7 +58,7 @@
    "source": [
     "# 3) Embedding equations using LaTeX\n",
     "\n",
-    "This can be done with the following syntax. Note that you can't have a space after the initial $ for the inline equations.\n",
+    "This can be done with the following syntax. \n",
     "\n",
     "Here is an inline equation $f(x) = \\int f(y, x) dy$.\n",
     "\n",
