updated jupyter python example

--- a/demo-python.ipynb
+++ b/demo-python.ipynb
@@ -136,7 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note above that output is not printed interspersed with the code, as one would generally want. So you need to break up your code into chunks such that the output appears immediately following the code.\n",
+    "Note above that output is not printed interspersed with the code, as one would generally want. So in some cases you may want to break up your code into chunks such that the output appears immediately following the code.\n",
     "\n",
     "Also note above that later chunks have access to result from earlier chunks (i.e., state is preserved between chunks). \n",
     "\n",
@@ -153,13 +153,13 @@
     "\n",
     "# 7) Formatting of long lines of code and of output\n",
     "\n",
-    "There is trouble with lines overflowing in Python output too.\n",
+    "For PDF but not HTML output, lines may overflow, and for both PDF and HTML line breaks may occur in awkward places. \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -168,18 +168,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "asdl lkjsdf jklsdf kladfj jksfd alkfd klasdf klad kla lakjsdf aljdkfad kljafda kaljdf afdlkja lkajdfsa lajdfa adlfjaf jkladf afdl\n",
+      "Statistics at UC Berkeley: We are a community engaged in research and education in probability and statistics. In addition to developing fundamental theory and methodology, we are actively\n",
       "{'killer whale': 'shamu', 'lion': 'Simba', 'bunny:': 'bugs', 'bear': 'Yogi', 'numAnimals': 3, 'whale': 'Moby', 'panda': None}\n",
       "{'killer whale': 'shamu', 'lion': 'Simba', 'bunny:': 'bugs', 'bear': 'Yogi', 'numAnimals': 3, 'whale': 'Moby', 'panda': None}\n"
      ]
     }
    ],
    "source": [
-    "# this overflows the page\n",
-    "b = \"asdl lkjsdf jklsdf kladfj jksfd alkfd klasdf klad kla lakjsdf aljdkfad kljafda kaljdf afdlkja lkajdfsa lajdfa adlfjaf jkladf afdl\"\n",
+    "# this can overflow the page\n",
+    "b = \"Statistics at UC Berkeley: We are a community engaged in research and education in probability and statistics. In addition to developing fundamental theory and methodology, we are actively\"\n",
     "print(b)\n",
     "\n",
-    "# this code overflows the page\n",
+    "# this code can overflow the page\n",
     "zoo = {\"lion\": \"Simba\", \"panda\": None, \"whale\": \"Moby\", \"numAnimals\": 3, \"bear\": \"Yogi\", \"killer whale\": \"shamu\", \"bunny:\": \"bugs\"}\n",
     "print(zoo)\n",
     "\n",
@@ -189,10 +189,10 @@
     "       \"bunny:\": \"bugs\"}\n",
     "print(zoo)\n",
     "\n",
-    "# long comments overflow too\n",
-    "# asdl lkjsdf jklsdf kladfj jksfd alkfd klasdf klad kla lakjsdf aljdkfad kljafda kaljdf afdlkja lkajdfsa lajdfa adlfjaf jkladf afdl\n",
+    "# long comments can overflow too\n",
+    "# Statistics at UC Berkeley: We are a community engaged in research and education in probability and statistics. In addition to developing fundamental theory and methodology, we are actively\"\n",
     "\n",
-    "# the long output that will appear next in the resulting document (produced from the evaluation of the code above) wraps to the next line:\n",
+    "# the long output that will appear next in the resulting document (produced from the evaluation of the code above) may wrap to the next line:\n",
     "\n"
    ]
   },
