--- a/demo.lyx
+++ b/demo.lyx
@@ -1,5 +1,5 @@
-#LyX 2.1 created this file. For more info see http://www.lyx.org/
-\lyxformat 474
+#LyX 2.0 created this file. For more info see http://www.lyx.org/
+\lyxformat 413
 \begin_document
 \begin_header
 \textclass article
@@ -18,13 +18,13 @@ knitr
 \font_roman default
 \font_sans default
 \font_typewriter default
-\font_math auto
 \font_default_family default
 \use_non_tex_fonts false
 \font_sc false
 \font_osf false
 \font_sf_scale 100
 \font_tt_scale 100
+
 \graphics default
 \default_output_format default
 \output_sync 0
@@ -44,24 +44,15 @@ knitr
 \pdf_pdfusetitle true
 \papersize default
 \use_geometry true
-\use_package amsmath 1
-\use_package amssymb 1
-\use_package cancel 1
-\use_package esint 1
-\use_package mathdots 0
-\use_package mathtools 1
-\use_package mhchem 0
-\use_package stackrel 1
-\use_package stmaryrd 1
-\use_package undertilde 1
-\cite_engine natbib
-\cite_engine_type authoryear
-\biblio_style plainnat
+\use_amsmath 1
+\use_esint 1
+\use_mhchem 0
+\use_mathdots 0
+\cite_engine natbib_authoryear
 \use_bibtopic false
 \use_indices false
 \paperorientation portrait
 \suppress_date false
-\justification true
 \use_refstyle 0
 \index Index
 \shortcut idx
@@ -359,12 +350,11 @@ Insert -> TeX code
 \family default
  (or use the TeX button in the LyX toolbar) and then type in your code as
  seen here.
- (Note that in older versions of LyX, rather than inserting as TeX code,
- you may need to tag the lines using the Chunk tag from the pulldown menu
- at the left of the toolbar near the top of the LyX window -- in that case,
- see 
+ Alternatively, rather than inserting as TeX code, you can tag your code
+ using the Chunk tag from the pulldown menu at the left of the toolbar near
+ the top of the LyX window -- in that case, see 
 \emph on
-demo_oldlyx.lyx
+demo_alt.lyx
 \emph default
 ).
 \end_layout
