some minor edits/fixes

--- a/demo-python.ipynb
+++ b/demo-python.ipynb
@@ -9,6 +9,7 @@
     "Illustrating the use of Python code chunks\n",
     "------------------\n",
     "Christopher Paciorek\n",
+    "\n",
     "August 2015"
    ]
   },
@@ -16,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1) How to generate a document from this file\n",
+    "# How to generate a document from this file\n",
     " You can create an HTML or PDF output file by simply selecting \n",
     " ```\n",
     " File -> Download as -> HTML (.html)\n",
@@ -29,8 +30,8 @@
     "\n",
     "To generate a document from the command line, you can do the following:\n",
     "```\n",
-    "ipython nbconvert demo-python.ipynb --to html  # for html\n",
-    "ipython nbconvert demo-python.ipynb --to pdf   # for pdf\n",
+    "jupyter nbconvert demo-python.ipynb --to html  # for html\n",
+    "jupyter nbconvert demo-python.ipynb --to pdf   # for pdf\n",
     "```\n",
     "\n"
    ]
@@ -40,8 +41,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "\n",
-    "# 2) Some basic Markdown formatting\n",
+    "# Some basic Markdown formatting\n",
     "\n",
     "Here's an *introduction* to our **critical** discovery. We have some code to display but not evaluate: `7 %% 5`, and we can embed the code in a static code block as follows:\n",
     "```\n",
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3) Embedding equations using LaTeX\n",
+    "# Embedding equations using LaTeX\n",
     "\n",
     "This can be done with the following syntax. \n",
     "\n",
@@ -72,15 +72,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4) Embedding R code\n",
+    "# Embedding R code\n",
     "You can't directly embed code chunks from different languages in the same document. See *demo-R.ipynb*.\n",
     "\n",
-    "# 5) Embedding Python code\n"
+    "# Embedding Python code\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -98,7 +98,7 @@
        "3"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,10 +148,10 @@
    "metadata": {},
    "source": [
     "\n",
-    "# 6) Reading code from an external file\n",
+    "# Reading code from an external file\n",
     "I'm not aware of a way to directly source code from an external file as the code in a code chunk.\n",
     "\n",
-    "# 7) Formatting of long lines of code and of output\n",
+    "# Formatting of long lines of code and of output\n",
     "\n",
     "For PDF but not HTML output, lines may overflow, and for both PDF and HTML line breaks may occur in awkward places. \n",
     "\n"
@@ -200,29 +200,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 8) References\n",
+    "# References\n",
     "\n",
     "It's possible to insert references and a bibliography into a Jupyter document but it's slightly involved so we won't go into it here.\n"
    ]
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "python2"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
